syntax = "proto3";
package petri.market.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/petrichormoney/petri/x/market/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

message TimeWeightedAverage {
  uint64 asset_id = 1 [
    (gogoproto.customname) = "AssetID",
    (gogoproto.moretags) = "yaml:\"asset_id\""
  ];
  uint64 script_id = 2 [
    (gogoproto.customname) = "ScriptID",
    (gogoproto.moretags) = "yaml:\"script_id\""
  ];
  uint64 twa = 3 [
    (gogoproto.customname) = "Twa",
    (gogoproto.moretags) = "yaml:\"twa\""
  ];
  uint64 current_index = 4 [
    (gogoproto.customname) = "CurrentIndex",
    (gogoproto.moretags) = "yaml:\"current_index\""
  ];
  bool is_price_active = 5 [(gogoproto.moretags) = "yaml:\"is_price_active\""];
  repeated  uint64 price_value = 6 [
    (gogoproto.customname) = "PriceValue",
    (gogoproto.moretags) = "yaml:\"price_value\""
  ];
  int64 discarded_height_diff = 7 [
    (gogoproto.moretags)   = "yaml:\"discarded_height_diff\""
  ];
}